syntax = "proto3";

package vmmorchestrator;

enum Language {
  RUST = 0;
  PYTHON = 1;
  NODE = 2;
}

enum LogLevel {
  DEBUG = 0;
  INFO = 1;
  WARN = 2;
  ERROR = 3;
}

// TODO: Didn't managed to import it from the agent file
message ExecuteResponse {
  enum Stage {
    PENDING = 0;
    BUILDING = 1;
    RUNNING = 2;
    DONE = 3;
    FAILED = 4;
    DEBUG = 5;
  }

  Stage stage = 1;
  optional string stdout = 2;
  optional string stderr = 3;
  optional int32 exit_code = 4;
}

service VmmService {
  rpc Shutdown (ShutdownVmRequest) returns (ShutdownVmResponse) {};
  rpc Run (RunVmmRequest) returns (stream ExecuteResponse) {};
}

message RunVmmRequest {
  string workload_name = 1;
  Language language = 2;
  string code = 3;
  LogLevel log_level = 4;
}

message RunVmmResponse {
}

message ShutdownVmRequest {
}

message ShutdownVmResponse {
  bool success = 1;
}